[tool.poetry]
name = "titool"
version = "0.1.0"
description = ""
authors = ["Maxence Markarian <markarian.maxence@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
beautifulsoup4 = "^4.10.0"
Flask-WTF = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "titool.main:start"
